// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Alert
  className="boxed-group-accordion-alert"
  display="inline"
  variant="error"
>
  foo
</Alert>
`;

exports[`should render correctly 2`] = `
<Alert
  className="boxed-group-accordion-alert"
  display="inline"
  variant="warning"
>
  foo
</Alert>
`;
